--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,6 +4,7 @@ services:
   client:
     build:
       context: ./client
+    image: madesh001/mern-client
     ports:
       - "3000:80"
     depends_on:
@@ -13,6 +14,7 @@ services:
   server:
     build:
       context: ./server
+    image: madesh001/mern-server
     ports:
       - "5001:5001"
     depends_on:
